@@ -221,7 +221,7 @@ function smarty_function_eF_template_printBlock($params, &$smarty) {
             $showContent = '';
         }
     }
-    if ($GLOBALS['configuration']['disable_move_blocks'] != 1) {
+    if ($GLOBALS['configuration']['disable_move_blocks'] != 1 && (!isset($GLOBALS['currentUser'] -> coreAccess['move_block']) || $GLOBALS['currentUser'] -> coreAccess['move_block'] != 'hidden')) {
      //This is hidden (css) unless it's inside a sortable ul
   $handleString .= '<img class = "blockMoveHandle" src = "images/16x16/attachment.png" alt = "'._MOVEBLOCK.'" title = "'._MOVEBLOCK.'" onmousedown = "createSortable(\'firstlist\');createSortable(\'secondlist\');if (window.showBorders) showBorders(event)" onmouseup = "if (window.showBorders) hideBorders(event)">';
     }
